--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Dileep Moguluru</h1>
     <hr />
     <hr />
-    <h2>Summery</h2>
+    <h2>Summary</h2>
     <p>I am a Technical Trainer in Jetking. I Specialise in Hardware,Networking,Python Programming,Server Administration and Cloud Architect.
         I use modern techniques and Technologies to teach and train my students. i am always learning way to upskill and better myself.
     </p>
