Updated my Resume

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <hr />
     <hr />
     <h2>Summary</h2>
-    <p>I am a Technical Trainer in Jetking. I Specialise in Hardware,Networking,Python Programming,Server Administration and Cloud Architect.
-        I use modern techniques and Technologies to teach and train my students. i am always learning way to upskill and better myself.
+    <p>I am the Chief technology Officer in <a href="https://veramasa.com">Veramasa</a>. I am head of Electronics, Embedded Systems and R&D Project Team.I Specialise in Hardware,Networking,Python Programming,Server Administration and Cloud Architect.
+        I use Modern Techniques and Technologies to visualise research and think of new projects and their workings and make them into useful products. i am always learning way to upskill and better myself.
     </p>
     <h2>Educational Background</h2>
     <ul>
@@ -21,7 +21,8 @@
     </ul>
     <h2>Work Experiance</h2>
     <ol>
-        <li>Worked as a Technical Trainer in Jetking Infotrain Ltd. from 2020 till date.</li>
+        <li><a href="https://veramasa.com/leader-ship">Working as a Cheif Technology Officer an Veramasa</a> from Oct 2024 onwords</li>
+        <li>Worked as a Technical Trainer in Jetking Infotrain Ltd. from 2020 to Oct 2024.</li>
         <li>Worked as a ITT -JEE Physics Lecturer in various institutions from 2006 - 2020 </li>
     </ol>
     <h2>Skills</h2>
@@ -51,16 +52,21 @@
         <li>HTML</li>
         <li>Containerisation using Docker and Podman</li>
         <li>Container Management using Kubernetes or Podman</li>
+        <li>MERN Stack(M-MongoDB,E=Express.js,R=React.JS,N=Node.js) along with Flutter and React.Native</li>
+        <li>Version Control using Git, CI/CD Pipeline using Jenkins, Automation using Ansible and Terraform</li>
     </ul>
     <h2>Certifications</h2>
     <ul>
         <li>Masters in Network Administration from Jetking Infotrain Limiited.</li>
         <li>Checkpoint Firewall from Udemy</li>
+        <li>Devops Certification from KodeKloud in Udemy</li>
+        <li>Web Devolopment Bootcamp in Udemy</li>
+        <li>MERN Full Cource from Udemy</li>
     </ul>
     <h2>Contact Me</h2>
     <ul>
         <li><a href="https://mysmartpath.info/">My Website</a></li>
-        <li><a href="https://linkedin.mysmartpath.in">My Linkedin Profile</a></li>
+        <li><a href="https://linkedin.com/in/dileepmoguluru">My Linkedin Profile</a></li>
 
     </ul>
 <hr />
